# llm-context

./: .gitignore  README.md  package-lock.json  package.json
fixtures/basic-lmdb/: package-lock.json  package.json  test.mjs
prompt/: normal.txt  readme.md
src/: cli.mjs  context.mjs  deps.mjs  fs-utils.mjs  project-type.mjs  readme.mjs  scripts.mjs  source-snapshot.mjs  tar.mjs
test/: cli.e2e.test.mjs
test/fixtures/lmdb-project/: package-lock.json  package.json
test/fixtures/lmdb-project/src/: index.mjs
test/fixtures/lmdb-project/test/: lmdb.test.mjs
test/fixtures/local-dep-project/: package-lock.json  package.json
test/fixtures/no-deps-project/: package.json
test/fixtures/no-lock-project/: package.json
test/fixtures/python-uv-project/: pyproject.toml
test/fixtures/python-uv-project/src/uv_app/: __init__.py
test/fixtures/python-uv-project/tests/: test_app.py
