[project]
name = "python-uv-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "local-uv-pkg==0.1.0",
]

[dependency-groups]
dev = [
  "black==0.1.0",
  "flake8==0.1.0",
  "pytest==0.1.0",
]

[tool.uv.sources]
local-uv-pkg = { path = "vendor/local_uv_pkg-0.1.0-py3-none-any.whl" }
black = { path = "vendor/black-0.1.0-py3-none-any.whl" }
flake8 = { path = "vendor/flake8-0.1.0-py3-none-any.whl" }
pytest = { path = "vendor/pytest-0.1.0-py3-none-any.whl" }
